--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script type="text/javascript" src="./script/fizzBuzz.js"></script>
 
-    <script type="test/javascript" src="./spec/fizzBuzzSpec.js"></script>
+    <script type="text/javascript" src="./spec/fizzBuzzSpec.js"></script>
 </head>
 
 <body>
